--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=ShopmeBackend
 server.port=9091
 server.servlet.context-path=/ShopmeAdmin
+
+spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=root
+spring.datasource.password=hakim@123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
