--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.username=root
 spring.datasource.password=hakim@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+spring.security.user.name=Hakim
+spring.security.user.password=hakim@123
