--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.datasource.password=hakim@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
-spring.security.user.name=Hakim
-spring.security.user.password=hakim@123
+#spring.security.user.name=hakim@gmail.com
+#spring.security.user.password=$2a$10$gfxEuvGbEYihXoDyvQPMH.7MSeVtEU2BKfUDJyls2j4zZ5UEJzEkG
