--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 spring.application.name=ShopmeBackend
 server.port=9091
 server.servlet.context-path=/ShopmeAdmin
+spring.threads.virtual.enabled=true
 
+# Database
 spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=root
 spring.datasource.password=hakim@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
-#spring.security.user.name=hakim@gmail.com
-#spring.security.user.password=$2a$10$gfxEuvGbEYihXoDyvQPMH.7MSeVtEU2BKfUDJyls2j4zZ5UEJzEkG
+trace=false
+debug=true
+logging.level.root=warn
+#logging.level.org.shopme.admin.user=debug
+logging.file.path=logs
+logging.logback.rollingpolicy.clean-history-on-start=true
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=10
