--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.application.name=ShopmeBackend
 server.port=9091
 server.servlet.context-path=/ShopmeAdmin
 spring.threads.virtual.enabled=true
-
 # Database
 spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,9 +9,10 @@ spring.datasource.username=root
 spring.datasource.password=hakim@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
-
+spring.jpa.show-sql=true
+# Logging
 trace=false
-debug=true
+debug=false
 logging.level.root=warn
 #logging.level.org.shopme.admin.user=debug
 logging.file.path=logs
