--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -18,3 +18,5 @@ logging.file.path=logs
 logging.logback.rollingpolicy.clean-history-on-start=true
 logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=10
+
+spring.servlet.multipart.max-file-size=5MB
