--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
@@ -1,3 +1,24 @@
 spring.application.name=ShopmeFrontend
-server.port=9092
+server.port=9093
 server.servlet.context-path=/Shopme
+
+spring.threads.virtual.enabled=true
+
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=hakim@123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+# Logging
+trace=false
+debug=false
+logging.level.root=warn
+#logging.level.org.shopme.admin.user=debug
+logging.file.path=logs
+logging.logback.rollingpolicy.clean-history-on-start=true
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=10
+
+spring.servlet.multipart.max-file-size=5MB
