Refactoring Going on

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9092
 server.servlet.context-path=/ShopmeAdmin
 spring.threads.virtual.enabled=true
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
+spring.datasource.url=jdbc:mysql://localhost:3307/shopmedb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=hakim@123
@@ -19,3 +19,7 @@ logging.logback.rollingpolicy.clean-history-on-start=true
 logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=10
 spring.servlet.multipart.max-file-size=5MB
+
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/plain,text/javascript,text/css,application/json,application/pdf,application/mp4,image/jpeg,image/png,image/svg+xml,application/font-woff,text/csv,text/xml
+server.compression.min-response-size=30KB
