--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/Shopme
 spring.threads.virtual.enabled=true
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
+spring.datasource.url=jdbc:mysql://localhost:3307/shopmedb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=hakim@123
@@ -30,3 +30,7 @@ spring.mail.username=sadiulhakim@gmail.com
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/plain,text/javascript,text/css,application/json,application/pdf,application/mp4,image/jpeg,image/png,image/svg+xml,application/font-woff,text/csv,text/xml
+server.compression.min-response-size=30KB
