--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.datasource.url=jdbc:mysql://localhost:3307/shopmedb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=hakim@123
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
+
 # Logging
 trace=false
 debug=false
