--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ShopmeFrontend
-server.port=8091
+server.port=8090
 server.servlet.context-path=/Shopme
 
 spring.threads.virtual.enabled=true
@@ -28,5 +28,9 @@ spring.servlet.multipart.max-file-size=5MB
 server.compression.enabled=true
 server.compression.mime-types=text/html,text/plain,text/javascript,text/css,application/json,application/pdf,application/mp4,image/jpeg,image/png,image/svg+xml,application/font-woff,text/csv,text/xml
 server.compression.min-response-size=30KB
+
+#Auth
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${SECRET}
 
 
