--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.servlet.multipart.max-file-size=5MB
 server.compression.enabled=true
 server.compression.mime-types=text/html,text/plain,text/javascript,text/css,application/json,application/pdf,application/mp4,image/jpeg,image/png,image/svg+xml,application/font-woff,text/csv,text/xml
 server.compression.min-response-size=30KB
+
+app.table.page.size=35
