Checkout and Stripe Payment

--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
@@ -33,4 +33,5 @@ server.compression.min-response-size=30KB
 spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${SECRET}
 
-
+# Stripe
+payment.stripe.secret_key=${STRIPE_SECRET_KEY}
